Use box_name variable as dhclient host-name

--- a/templates/dhcp3/dhclient.conf
+++ b/templates/dhcp3/dhclient.conf
@@ -52,5 +52,7 @@ request subnet-mask, broadcast-address, time-offset, routers,
 #  expire 2 2000/1/12 00:00:01;
 #}
 
-send host-name "pigebox";
+<% if has_variable?("box_name") %>
+send host-name "<%= box_name %>";
+<% end %>
 script "/etc/dhcp3/dhclient-script";
