Create /var/log/syslog before rsyslog. Refs #21

--- a/files/syslog/rsyslog.conf
+++ b/files/syslog/rsyslog.conf
@@ -45,6 +45,6 @@ $DirCreateMode 0755
 $IncludeConfig /etc/rsyslog.d/*.conf
 
 # max-size: 25M
-$outchannel syslog,/var/log/syslog,26214400,mv -f /var/log/syslog /var/log/syslog.1
+$outchannel syslog,/var/log/syslog,26214400,/usr/local/bin/flogrotate /var/log/syslog
 *.*		-$syslog
 
