Add support for runtime rsyslog.d configuration. Manage a \$syslog_server config variable

--- a/files/syslog/rsyslog.conf
+++ b/files/syslog/rsyslog.conf
@@ -44,6 +44,8 @@ $DirCreateMode 0755
 #
 $IncludeConfig /etc/rsyslog.d/*.conf
 
+$IncludeConfig /etc/rsyslog.d/runtime/*.conf
+
 # max-size: 25M
 $outchannel syslog,/var/log/syslog,26214400,/usr/local/bin/flogrotate /var/log/syslog
 *.*		-$syslog
