Fixes wpa_supplicant.conf template (deployed on boot). Fixes #792

--- a/files/network/wpa_supplicant.conf
+++ b/files/network/wpa_supplicant.conf
@@ -1,16 +1,17 @@
 ctrl_interface=/var/run/wpa_supplicant
 ctrl_interface_group=0
 fast_reauth=1
-<% if has_variable?("wifi_active") %>
+
 network={
 ssid="<%= wifi_essid %>" #mandatory parameter
 key_mgmt=WPA-EAP
 pairwise=TKIP
 eap=TTLS
 <% if has_variable?("wifi_identity") %>
-identity="<%= wifi_identity %>" # Identifiant <% end %>
+identity="<%= wifi_identity %>" # Identifiant
+<% end %>
 <% if has_variable?("wifi_password") %>
-password="<%= wifi_password %>" # Mot de passe associé à l'identifant <% end %>
+password="<%= wifi_password %>" # Mot de passe associé à l'identifant
+<% end %>
 phase2="auth=MSCHAPV2"
 }
-<% end %>
