--- a/files/network/wpa_supplicant.conf
+++ b/files/network/wpa_supplicant.conf
@@ -5,7 +5,7 @@ fast_reauth=1
 network={
 ssid="<%= wifi_essid %>" #mandatory parameter
 key_mgmt=WPA-EAP
-pairwise=TKIP
+pairwise=CCMP TKIP
 eap=TTLS
 <% if has_variable?("wifi_identity") %>
 identity="<%= wifi_identity %>" # Identifiant
