--- a/files/network/wpa_supplicant.conf
+++ b/files/network/wpa_supplicant.conf
@@ -2,16 +2,20 @@ ctrl_interface=/var/run/wpa_supplicant
 ctrl_interface_group=0
 fast_reauth=1
 
+<% wifi_networks.each do |network| %>
 network={
-ssid="<%= wifi_essid %>" #mandatory parameter
-key_mgmt=WPA-EAP
-pairwise=CCMP TKIP
-eap=TTLS
-<% if has_variable?("wifi_identity") %>
-identity="<%= wifi_identity %>" # Identifiant
-<% end %>
-<% if has_variable?("wifi_password") %>
-password="<%= wifi_password %>" # Mot de passe associé à l'identifant
-<% end %>
-phase2="auth=MSCHAPV2"
+  <% %w{ssid psk identity password phase2}.each do |attribute| %>
+  <% value = network[attribute] %>
+  <% if value and not value.empty? %>
+  <%= attribute %>="<%= value %>"
+  <% end %>
+  <% end %>
+
+  <% %w{proto key_mgmt pairwise eap group}.each do |attribute| %>
+  <% value = network[attribute] %>
+  <% if value and not value.empty? %>
+  <%= attribute %>=<%= value %>
+  <% end %>
+  <% end %>
 }
+<% end %>
